@@ -4,7 +4,7 @@
 ;   If omitted, Px will exit immediately
 ;   IP:port
 ;   Hostname:port
-server = 
+server =
 
 ; IP interface to listen on - default: 127.0.0.1
 listen = 127.0.0.1
@@ -29,6 +29,9 @@ allow = *.*.*.*
 ;   192.168.0.1-192.168.0.255 - ranges
 ;   192.168.0.1/24 - CIDR
 noproxy =
+
+; Override or send User-Agent header on client's behalf
+useragent =
 
 [settings]
 
